--- a/podium-helper/public/index.html
+++ b/podium-helper/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/SRO.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="SRO Motorsports America Podium Support" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/SRO.jpg" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
